@@ -1,64 +1,51 @@
-/// lab2 2.2
-/// 
 package at.ac.fhcampuswien.services;
 
+import at.ac.fhcampuswien.exceptions.DatabaseException;
+import at.ac.fhcampuswien.exceptions.MovieNotFoundException;
 import at.ac.fhcampuswien.models.Movie;
+import at.ac.fhcampuswien.repositories.MovieRepository;
 
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
+// Service: enthält die Business Logic und delegiert DB-Operationen ans Repository
 public class MovieService {
 
-    private List<Movie> movies;
+    private MovieRepository movieRepository;
 
-    // ✅ Inyección por constructor
-    public MovieService(List<Movie> movies) {
-        this.movies = movies;
+    // Repository wird per Konstruktor injiziert (gut für Tests + Mockito)
+    public MovieService(MovieRepository movieRepository) {
+        this.movieRepository = movieRepository;
     }
 
-    public List<Movie> getAllMovies() {
-        return movies;
+    public List<Movie> getAllMovies() throws DatabaseException {
+        return movieRepository.findAll();
     }
 
-    public List<Movie> searchMovies(String title, String genre, Integer year) {
-        return movies.stream()
+    public List<Movie> searchMovies(String title, String genre, Integer releaseYear) throws DatabaseException {
+        return movieRepository.findAll().stream()
                 .filter(m -> title == null || m.getTitle().toLowerCase().contains(title.toLowerCase()))
-                .filter(m -> genre == null || m.getGenre().toLowerCase().contains(genre.toLowerCase()))
-                .filter(m -> year == null || m.getReleaseYear() == year)
-                .toList();
+                .filter(m -> genre == null || m.getGenre().equalsIgnoreCase(genre))
+                .filter(m -> releaseYear == null || m.getReleaseYear() == releaseYear)
+                .collect(Collectors.toList());
     }
 
-    public boolean addMovie(String title, String genre, int year) {
-
-        boolean exists = movies.stream().anyMatch(m ->
-                m.getTitle().equalsIgnoreCase(title) &&
-                m.getGenre().equalsIgnoreCase(genre) &&
-                m.getReleaseYear() == year
-        );
-
-        if (exists) return false;
-
-        movies.add(new Movie(title, genre, year));
-        return true;
+    public void addMovie(String title, String genre, int releaseYear) throws DatabaseException {
+        Movie movie = new Movie(title, genre, releaseYear);
+        movieRepository.add(movie);
     }
 
-    public boolean deleteMovie(String title, String genre, int year) {
-        return movies.removeIf(m ->
-                m.getTitle().equalsIgnoreCase(title) &&
-                m.getGenre().equalsIgnoreCase(genre) &&
-                m.getReleaseYear() == year
-        );
+    public void deleteMovie(String title, String genre, int releaseYear)
+            throws DatabaseException, MovieNotFoundException {
+        Movie movie = new Movie(title, genre, releaseYear);
+        movieRepository.delete(movie);
     }
 
-    public boolean updateMovie(String id, String title, String genre, int year) {
-        return movies.stream()
-                .filter(m -> m.getId().toString().equals(id))
-                .findFirst()
-                .map(m -> {
-                    m.setTitle(title);
-                    m.setGenre(genre);
-                    m.setReleaseYear(year);
-                    return true;
-                })
-                .orElse(false);
+    public void updateMovie(String id, String title, String genre, int releaseYear)
+            throws DatabaseException, MovieNotFoundException {
+        Movie movie = new Movie(title, genre, releaseYear);
+        movie.setId(UUID.fromString(id));
+        movieRepository.update(movie);
     }
 }
